--- a/flask_homework_l53/templates/base.html
+++ b/flask_homework_l53/templates/base.html
@@ -18,7 +18,7 @@
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
                         <li>
-                            <a href="#">
+                            <a href="/add">
                                 <span class="uk-icon uk-margin-small-right" uk-icon="icon: pencil"></span>
                                 Создать задачу
                             </a>
@@ -31,7 +31,9 @@
     </header>
 
     <div class="uk-container uk-container-large">
+
     {% block main %}{% endblock main %}
+
     </div>
 
 
