modify base template

--- a/flask_homework_l53/templates/base.html
+++ b/flask_homework_l53/templates/base.html
@@ -30,7 +30,7 @@
 
     </header>
 
-    <div class="uk-container uk-container-large">
+    <div class="uk-container uk-container-small">
 
     {% block main %}{% endblock main %}
 
