--- a/flask_homework_l53/templates/add_task.html
+++ b/flask_homework_l53/templates/add_task.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block title %}
     <title>Добавить задачу</title>
@@ -6,30 +6,21 @@
 
 {% block main %}
 
-    <form method="post">
-        <fieldset class="uk-fieldset">
-
-            <legend class="uk-legend">Добавить задачу</legend>
-
-            <div class="uk-margin">
-                <input class="uk-input uk-form-width-large" type="text" name="task_title" placeholder="Новая задача">
-            </div>
-
-            <div class="uk-margin">
-                <input class="uk-input uk-form-width-large" type="text" name="task_description" placeholder="Описание задачи">
-            </div>
-
-            <div class="uk-margin">
-                <button class="uk-button uk-button-primary" type="submit">Подтвердить</button>
-            </div>
-
-        </fieldset>
-    </form>
-
-    {% if error %}
-    <h3>{{ error }}</h3>
-    {% endif %}
-
-
+    <div class="container">
+        <form method="post" class="row g-3 justify-content-center">
+            <fieldset class="col-sm-6">
+                <div class="mb-3">
+                    <label for="taskTitle" class="form-label">Создать новую задачу</label>
+                    <input type="text" name="task_title" class="form-control" id="taskTitle"
+                           placeholder="Новая задача">
+                </div>
+                <div class="mb-3">
+                    <label for="taskDescription" class="form-label">Описание задачи</label>
+                    <textarea name="task_description" class="form-control" id="taskDescription" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary mb-3">Создать</button>
+            </fieldset>
+        </form>
+    </div>
 
 {% endblock %}
